tests/snapshots/examples_fixtures/base__base_directives_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_directives_ok.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/base/base_directives_ok.flx:8:1
  |
8 | Base.print("len(xs) = " + to_string(len(xs)));
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | --------------------------------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/base/base_directives_ok.flx:9:1
  |
9 | Base.print("first(xs) = " + to_string(first(xs)));
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 2 errors.
== stdout ==
<not executed>
